  Here's their replacements if you were using them:
    * `win32com.universal.com_error` --> `pythoncom.com_error`
    * `win32com.client.build.error` --> `"PythonCOM.Client.Build error"`
    * `win32com.client.genpy.error` --> `"makepy.error"`
    * `win32com.client.tlbrowse.error` --> `win32com.client.tlbrowse.TLBrowserException`
    * `win32evtlogutil.error` -> `win32api.error` or `pywintypes.error`
    * `win32pdhutil.error` -> `win32pdh.error` or `pywintypes.error`
    * `sspi.error` is still importable, but no longer exposed as a public member, use `win32security.error` or `pywintypes.error` instead
* Marked `exc_type` and `exc_traceback` in `win32comext.axscript.client.error.AXScriptException.__init__` as deprecated.
  They are now unused and all information is taken from the `exc_value` parameter.
* Fixed non-overriden `pywin.scintilla.formatter.Formatter.ColorizeString` raising `TypeError` instead of `RuntimeError` due to too many parameters (#2216, @Avasam)
* Fixed broken since Python 3 tokenization in `win32comext.axdebug.codecontainer.pySourceCodeContainer.GetSyntaxColorAttributes` (#2216, @Avasam)
* Fixed a `TypeError` due to incorrect kwargs in `win32comext.axscript.client.pydumper.Register` (#2216, @Avasam)
* Fixed error reporting of file copy failure for for installing debug dlls (#2216, @Avasam)
* Fixed `py.exe -m win32verstamp` command and other quote typos caused by Implied String Concatenation (#2225, @Avasam)
* Fixed VT_SAFEARRAY(VT_RECORD) which were missing the last element (#2247)
* Fixed `MFC redist DLLs not found` by preferring corresponding version but accepting different version (#2248, @andreabravetti)
* Fixed `pywintypes.error: (5, 'RegOpenKeyEx', 'Access is denied.')` when running service with debug parameter and no elevation (#2238, @jmartens)
* Fixed handling of `SyntaxError` exception from a Windows Scripting Host Python Script on Python 3.10+ (#2235, @nbbeatty)
* Add `CredGetSessionTypes` support (#2232, @CristiFati)